2008-09-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-notebook.h:
	notebook: added missing prev_page() and next_page()

2008-09-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-delete-dialog.cc:
	Iterate through the file list MUCH faster (O(n*n) -> O(n))

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-quicksearch-popup.cc:
	Move get_file_at_row() and get_row_from_file() to GnomeCmdFileList

	* configure.in:
	* data/gnome-commander.ebuild.in:
	Use version requirements for ebuild from configure.in

2008-09-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-device.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-home.cc:
	* src/gnome-cmd-con-smb.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-options-dialog.cc:
	* src/imageloader.cc:
	GnomeCmdData: more C++ rework

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-mkdir-dialog.cc:
	* src/gnome-cmd-rename-dialog.cc:
	* src/gnome-cmd-search-dialog.cc:
	gnome_cmd_file_list_focus_file() -> GnomeCmdFileList::focus_file()

2008-09-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	gnome_cmd_file_list_show_dir_size() -> GnomeCmdFileList::show_dir_size()

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	inline gnome_cmd_dir_ref() and gnome_cmd_dir_unref()

	* libgcmd/libgcmd-widget-factory.c:
	* libgcmd/libgcmd-widget-factory.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-options-dialog.cc:
	* gnome-cmd-tags-doc.cc:
	gcc warnings cleanup

2008-09-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-cmdline.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	GnomeCmdData: more C++ rework

2008-09-24  Takao Fujiwara  <Takao.Fujiwara@Sun.COM>
